fixed image not showing up.

--- a/style.css
+++ b/style.css
@@ -123,8 +123,8 @@ hr {
     align-items: center;
     background-color: white;
     border-radius: 10px;
-    width: 350px;
-    height: 350px;
+    width: 300px;
+    height: 100px;
     margin-right: 50%;
     margin-left: 35%;
     box-shadow: 10px 10px 5px rgb(132, 110, 137);
